# qsampler

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.git  Makefile.in  Makefile.svn  README  README.cmake  TODO  TRANSLATORS  configure.ac  configure.in  pixmaps.qrc  qsampler.1  qsampler.desktop.in  qsampler.pro  qsampler.pro.in  qsampler.spec.in
debian/: README.Debian  changelog  control  copyright  qsampler.1  rules
icons/: qsampler.qrc
osx/: README.osx  linuxsampler.starter  qsampler.icns  wrapper.sh
osx/qsampler.xcodeproj/: project.pbxproj
rpm/: qsampler.spec
src/: CMakeLists.txt  cmake_config.h  cmake_config.h.in  config.h.cmake  main.cpp  qsampler.cpp  qsampler.desktop  qsampler.desktop.in  qsampler.h  qsampler.qrc  qsamplerAbout.h  qsamplerChannel.cpp  qsamplerChannel.h  qsamplerChannelForm.cpp  qsamplerChannelForm.h  qsamplerChannelForm.ui  qsamplerChannelForm.ui.h  qsamplerChannelFxForm.cpp  qsamplerChannelFxForm.h  qsamplerChannelFxForm.ui  qsamplerChannelStrip.cpp  qsamplerChannelStrip.h  qsamplerChannelStrip.ui  qsamplerChannelStrip.ui.h  qsamplerChannels.cpp  qsamplerChannels.h  qsamplerDevice.cpp  qsamplerDevice.h  qsamplerDeviceForm.cpp  qsamplerDeviceForm.h  qsamplerDeviceForm.ui  qsamplerDeviceForm.ui.h  qsamplerDeviceStatusForm.cpp  qsamplerDeviceStatusForm.h  qsamplerFxSend.cpp  qsamplerFxSend.h  qsamplerFxSendsModel.cpp  qsamplerFxSendsModel.h  qsamplerInstrument.cpp  qsamplerInstrument.h  (+29 more)
src/appdata/: org.rncbc.qsampler.desktop  org.rncbc.qsampler.metainfo.xml  org.rncbc.qsampler.xml  qsampler.appdata.xml
src/images/: qsampler.icns  qsampler.svgz
src/man1/: qsampler.1  qsampler.fr.1
src/mimetypes/: application-x-qsampler-session.svgz  org.rncbc.qsampler.xml  qsampler.xml
src/translations/: qsampler_cs.ts  qsampler_fr.ts  qsampler_ru.ts
translations/: qsampler_cs.ts  qsampler_ru.ts
win32/: config.h  qsampler.pro
